Fixing dark mode

--- a/restaurantID/cook.css
+++ b/restaurantID/cook.css
@@ -53,10 +53,15 @@ body {
 }
 
 section {
+	height: 600px;
 	background-color: rgba(255, 255, 255, 0.5);
 	margin: 100px;
-	margin-top: 100px;
-	margin-bottom: 10px;
+	margin-top: 110px;
 	padding: 50px;
-	border-radius: 50px;
+	padding-top: 25px;
+	border-radius: 5px;
+	overflow: scroll;
+	overflow-x: hidden;
+	scrollbar-width: thin;
+	scrollbar-color: #EE9043 grey;
 }
